// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FolderModal > matches snapshot - create mode 1`] = `
<div
  class="fixed inset-0 z-50 flex items-center justify-center p-4 bg-black/50 backdrop-blur-sm"
>
  <div
    class="glass-card p-6 rounded-2xl max-w-md w-full"
  >
    <h2
      class="text-2xl font-bold mb-4 text-[var(--text-primary)]"
    >
      Create New Folder
    </h2>
    <form
      class="space-y-4"
    >
      <div>
        <label
          class="block text-sm font-medium mb-2 text-[var(--text-primary)]"
          for="folderName"
        >
          Folder Name
        </label>
        <input
          class="glass-input w-full px-4 py-2 rounded-lg"
          id="folderName"
          placeholder="Enter folder name"
          type="text"
          value=""
        />
      </div>
      <div>
        <h3
          class="block text-sm font-medium mb-2 text-[var(--text-primary)]"
        >
          Icon
        </h3>
        <div
          class="grid grid-cols-5 gap-1"
        >
          <button
            class="p-1 rounded-lg text-lg transition-all bg-blue-500/20 border-1 border-blue-500"
            title="Folder"
            type="button"
          >
            📁
          </button>
          <button
            class="p-1 rounded-lg text-lg transition-all glass-card-item hover:bg-blue-500/10 border-2 border-transparent"
            title="Briefcase"
            type="button"
          >
            💼
          </button>
          <button
            class="p-1 rounded-lg text-lg transition-all glass-card-item hover:bg-blue-500/10 border-2 border-transparent"
            title="Home"
            type="button"
          >
            🏠
          </button>
          <button
            class="p-1 rounded-lg text-lg transition-all glass-card-item hover:bg-blue-500/10 border-2 border-transparent"
            title="Archive"
            type="button"
          >
            📦
          </button>
          <button
            class="p-1 rounded-lg text-lg transition-all glass-card-item hover:bg-blue-500/10 border-2 border-transparent"
            title="Book"
            type="button"
          >
            📚
          </button>
          <button
            class="p-1 rounded-lg text-lg transition-all glass-card-item hover:bg-blue-500/10 border-2 border-transparent"
            title="Star"
            type="button"
          >
            ⭐
          </button>
          <button
            class="p-1 rounded-lg text-lg transition-all glass-card-item hover:bg-blue-500/10 border-2 border-transparent"
            title="Heart"
            type="button"
          >
            ❤️
          </button>
          <button
            class="p-1 rounded-lg text-lg transition-all glass-card-item hover:bg-blue-500/10 border-2 border-transparent"
            title="Code"
            type="button"
          >
            💻
          </button>
          <button
            class="p-1 rounded-lg text-lg transition-all glass-card-item hover:bg-blue-500/10 border-2 border-transparent"
            title="Tag"
            type="button"
          >
            🏷️
          </button>
          <button
            class="p-1 rounded-lg text-lg transition-all glass-card-item hover:bg-blue-500/10 border-2 border-transparent"
            title="Inbox"
            type="button"
          >
            📥
          </button>
        </div>
      </div>
      <div>
        <h3
          class="block text-sm font-medium mb-2 text-[var(--text-primary)]"
        >
          Color
        </h3>
        <div
          class="flex gap-1 flex-row"
          style="margin-bottom: 0.5rem; margin-top: 0.5rem;"
        >
          <button
            class="w-10 h-10 rounded-full border-2 transition-transform border-white scale-110 shadow-lg"
            style="background-color: rgb(59, 130, 246);"
            title="Blue"
            type="button"
          />
          <button
            class="w-10 h-10 rounded-full border-2 transition-transform border-gray-300 dark:border-gray-600 hover:scale-105"
            style="background-color: rgb(16, 185, 129);"
            title="Green"
            type="button"
          />
          <button
            class="w-10 h-10 rounded-full border-2 transition-transform border-gray-300 dark:border-gray-600 hover:scale-105"
            style="background-color: rgb(245, 158, 11);"
            title="Amber"
            type="button"
          />
          <button
            class="w-10 h-10 rounded-full border-2 transition-transform border-gray-300 dark:border-gray-600 hover:scale-105"
            style="background-color: rgb(239, 68, 68);"
            title="Red"
            type="button"
          />
          <button
            class="w-10 h-10 rounded-full border-2 transition-transform border-gray-300 dark:border-gray-600 hover:scale-105"
            style="background-color: rgb(139, 92, 246);"
            title="Purple"
            type="button"
          />
          <button
            class="w-10 h-10 rounded-full border-2 transition-transform border-gray-300 dark:border-gray-600 hover:scale-105"
            style="background-color: rgb(236, 72, 153);"
            title="Pink"
            type="button"
          />
          <button
            class="w-10 h-10 rounded-full border-2 transition-transform border-gray-300 dark:border-gray-600 hover:scale-105"
            style="background-color: rgb(107, 114, 128);"
            title="Gray"
            type="button"
          />
          <button
            class="w-10 h-10 rounded-full border-2 transition-transform border-gray-300 dark:border-gray-600 hover:scale-105"
            style="background-color: rgb(20, 184, 166);"
            title="Teal"
            type="button"
          />
        </div>
      </div>
      <div
        class="flex justify-end gap-3 pt-4"
      >
        <button
          class="btn-secondary-glass"
          type="button"
        >
          Cancel
        </button>
        <button
          class="btn-apple"
          type="submit"
        >
          Save
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`FolderModal > matches snapshot - edit mode 1`] = `
<div
  class="fixed inset-0 z-50 flex items-center justify-center p-4 bg-black/50 backdrop-blur-sm"
>
  <div
    class="glass-card p-6 rounded-2xl max-w-md w-full"
  >
    <h2
      class="text-2xl font-bold mb-4 text-[var(--text-primary)]"
    >
      Edit Folder
    </h2>
    <form
      class="space-y-4"
    >
      <div>
        <label
          class="block text-sm font-medium mb-2 text-[var(--text-primary)]"
          for="folderName"
        >
          Folder Name
        </label>
        <input
          class="glass-input w-full px-4 py-2 rounded-lg"
          id="folderName"
          placeholder="Enter folder name"
          type="text"
          value="Work"
        />
      </div>
      <div>
        <h3
          class="block text-sm font-medium mb-2 text-[var(--text-primary)]"
        >
          Icon
        </h3>
        <div
          class="grid grid-cols-5 gap-1"
        >
          <button
            class="p-1 rounded-lg text-lg transition-all glass-card-item hover:bg-blue-500/10 border-2 border-transparent"
            title="Folder"
            type="button"
          >
            📁
          </button>
          <button
            class="p-1 rounded-lg text-lg transition-all bg-blue-500/20 border-1 border-blue-500"
            title="Briefcase"
            type="button"
          >
            💼
          </button>
          <button
            class="p-1 rounded-lg text-lg transition-all glass-card-item hover:bg-blue-500/10 border-2 border-transparent"
            title="Home"
            type="button"
          >
            🏠
          </button>
          <button
            class="p-1 rounded-lg text-lg transition-all glass-card-item hover:bg-blue-500/10 border-2 border-transparent"
            title="Archive"
            type="button"
          >
            📦
          </button>
          <button
            class="p-1 rounded-lg text-lg transition-all glass-card-item hover:bg-blue-500/10 border-2 border-transparent"
            title="Book"
            type="button"
          >
            📚
          </button>
          <button
            class="p-1 rounded-lg text-lg transition-all glass-card-item hover:bg-blue-500/10 border-2 border-transparent"
            title="Star"
            type="button"
          >
            ⭐
          </button>
          <button
            class="p-1 rounded-lg text-lg transition-all glass-card-item hover:bg-blue-500/10 border-2 border-transparent"
            title="Heart"
            type="button"
          >
            ❤️
          </button>
          <button
            class="p-1 rounded-lg text-lg transition-all glass-card-item hover:bg-blue-500/10 border-2 border-transparent"
            title="Code"
            type="button"
          >
            💻
          </button>
          <button
            class="p-1 rounded-lg text-lg transition-all glass-card-item hover:bg-blue-500/10 border-2 border-transparent"
            title="Tag"
            type="button"
          >
            🏷️
          </button>
          <button
            class="p-1 rounded-lg text-lg transition-all glass-card-item hover:bg-blue-500/10 border-2 border-transparent"
            title="Inbox"
            type="button"
          >
            📥
          </button>
        </div>
      </div>
      <div>
        <h3
          class="block text-sm font-medium mb-2 text-[var(--text-primary)]"
        >
          Color
        </h3>
        <div
          class="flex gap-1 flex-row"
          style="margin-bottom: 0.5rem; margin-top: 0.5rem;"
        >
          <button
            class="w-10 h-10 rounded-full border-2 transition-transform border-white scale-110 shadow-lg"
            style="background-color: rgb(59, 130, 246);"
            title="Blue"
            type="button"
          />
          <button
            class="w-10 h-10 rounded-full border-2 transition-transform border-gray-300 dark:border-gray-600 hover:scale-105"
            style="background-color: rgb(16, 185, 129);"
            title="Green"
            type="button"
          />
          <button
            class="w-10 h-10 rounded-full border-2 transition-transform border-gray-300 dark:border-gray-600 hover:scale-105"
            style="background-color: rgb(245, 158, 11);"
            title="Amber"
            type="button"
          />
          <button
            class="w-10 h-10 rounded-full border-2 transition-transform border-gray-300 dark:border-gray-600 hover:scale-105"
            style="background-color: rgb(239, 68, 68);"
            title="Red"
            type="button"
          />
          <button
            class="w-10 h-10 rounded-full border-2 transition-transform border-gray-300 dark:border-gray-600 hover:scale-105"
            style="background-color: rgb(139, 92, 246);"
            title="Purple"
            type="button"
          />
          <button
            class="w-10 h-10 rounded-full border-2 transition-transform border-gray-300 dark:border-gray-600 hover:scale-105"
            style="background-color: rgb(236, 72, 153);"
            title="Pink"
            type="button"
          />
          <button
            class="w-10 h-10 rounded-full border-2 transition-transform border-gray-300 dark:border-gray-600 hover:scale-105"
            style="background-color: rgb(107, 114, 128);"
            title="Gray"
            type="button"
          />
          <button
            class="w-10 h-10 rounded-full border-2 transition-transform border-gray-300 dark:border-gray-600 hover:scale-105"
            style="background-color: rgb(20, 184, 166);"
            title="Teal"
            type="button"
          />
        </div>
      </div>
      <div
        class="flex justify-end gap-3 pt-4"
      >
        <button
          class="btn-secondary-glass"
          type="button"
        >
          Cancel
        </button>
        <button
          class="btn-apple"
          type="submit"
        >
          Save
        </button>
      </div>
    </form>
  </div>
</div>
`;
